mdapi/Custom/objects/Bulk_Sale__c.object
<CustomObject>
    <description>This is used by our Acquisitions team to tie together all of the prospects/pipeline/portfolio records associated with a bulk sale and provide some macro details about the deal process.</description>
    <fields>
        <fullName>Acquisitions_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_In_Basis_Gross_Yield__c</fullName>
        <label>All-In Basis Gross Yield</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Basis_PSF__c</fullName>
        <formula>All_In_Basis__c  /  Total_Square_Feet__c</formula>
        <label>All-In Basis PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Basis__c</fullName>
        <label>All-In Basis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Basis_per_Asset__c</fullName>
        <formula>All_In_Basis__c  /  Total_Properties__c</formula>
        <label>All-In Basis per Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BPO_V__c</fullName>
        <label>BPO Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Description__c</fullName>
        <label>Bulk Deal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Stage__c</fullName>
        <label>Bulk Deal Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>LOI</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Status__c</fullName>
        <label>Bulk Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiating / Underwriting</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>LOI Pending</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signed LOI</fullName>
                </value>
                <value>
                    <fullName>LOI Signed</fullName>
                </value>
                <value>
                    <fullName>LOI Approvals Pending</fullName>
                </value>
                <value>
                    <fullName>LOI Approved</fullName>
                </value>
                <value>
                    <fullName>Earnest Money Sent</fullName>
                </value>
                <value>
                    <fullName>Reviewing PSA</fullName>
                </value>
                <value>
                    <fullName>PSA Approvals Pending</fullName>
                </value>
                <value>
                    <fullName>PSA Approved</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>IH Deal Not Accepted</fullName>
                </value>
                <value>
                    <fullName>IH Declined</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <displayFormat>Bulk Deal - {0000}</displayFormat>
        <externalId>true</externalId>
        <label>Bulk Deal #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Client_File_No__c</fullName>
        <label>Client File #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Balance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Date_Notes__c</fullName>
        <label>Closing Date Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Wire_Date__c</fullName>
        <label>Closing Wire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement__c</fullName>
        <label>Confidentiality Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Comments__c</fullName>
        <label>Deposit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Expiration_Date_Notes__c</fullName>
        <label>Due Diligence Expiration Date Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Expiration_Date__c</fullName>
        <label>Due Diligence Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earnest_Money_Escrow_Agent_or_Seller__c</fullName>
        <label>Earnest Money w/ Escrow Agent or Seller?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escrow Agent</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Bid_Due__c</fullName>
        <label>Final Bid Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Docs_Ready_Missing__c</fullName>
        <label>Financing Docs Ready/Missing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IH2_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IH Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bulk Deals</relationshipLabel>
        <relationshipName>Bulk_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IH_Bulk_Value__c</fullName>
        <label>IH Bulk Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initated_by__c</fullName>
        <inlineHelpText>Is this a deal sourced directly by the region or did it originate through a corporate channel such as the website or the corporate bulk acquisition team?</inlineHelpText>
        <label>Regional or Corporate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Offer_Amount__c</fullName>
        <inlineHelpText>Amounts can be entered as 25K or 25M as shortcuts for thousands or millions.</inlineHelpText>
        <label>Initial Offer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOI_Approved_by_Acquisitions__c</fullName>
        <description>This field is used in the approval process and is populated via Workflow Field Update.</description>
        <label>LOI Approved by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Approved_by_Legal__c</fullName>
        <description>This field is part of the approval process and is populated via Workflow Field Update.</description>
        <label>LOI Approved by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Comments__c</fullName>
        <label>LOI Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOI_Execution_Date__c</fullName>
        <label>LOI Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Rejected_by_Acquisitions__c</fullName>
        <description>This field is used in the approval process.  It&apos;s updated via a Workflow Field Update.</description>
        <label>LOI Rejected by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Rejected_by_Legal__c</fullName>
        <description>This field is used in the approval process.  It&apos;s updated via a Workflow Field Update.</description>
        <label>LOI Rejected by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOI_Status__c</fullName>
        <label>LOI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Awaiting Seller Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Seller Signature</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <inlineHelpText>Amounts can be entered as 25K or 25M as shortcuts for thousands or millions.</inlineHelpText>
        <label>List  Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Acquired__c</fullName>
        <label># Acquired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offered__c</fullName>
        <label># Offered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Approved_by_Acquisitions__c</fullName>
        <description>This field is used in the approval process and is populated via Workflow Field Update.</description>
        <label>PSA Approved by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Approved_by_Legal__c</fullName>
        <description>This field is used in the approval process and is populated via Workflow Field Update.</description>
        <label>PSA Approved by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Comments__c</fullName>
        <label>PSA Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Execution_Date__c</fullName>
        <label>PSA Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Rejected_by_Acquisitions__c</fullName>
        <description>This field is used in the approval process.  It&apos;s updated via a Workflow Field Update.</description>
        <label>PSA Rejected by Acquisitions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Rejected_by_Legal__c</fullName>
        <description>This field is used in the approval process.  It&apos;s updated via a Workflow Field Update.</description>
        <label>PSA Rejected by Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Status__c</fullName>
        <label>PSA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Buyer</fullName>
                </value>
                <value>
                    <fullName>Awaiting from Seller</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Occupied__c</fullName>
        <label>% Occupied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pipeline_ListView_Id__c</fullName>
        <label>Pipeline ListView Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Listview__c</fullName>
        <formula>IF(ISBLANK(Property_ListView_Id__c), &apos;&apos;, HYPERLINK(&apos;/a0m?div_filter=&amp;fcf=&apos; + LEFT(Pipeline_ListView_Id__c, 15), &apos;Click here&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Listview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_View_URL__c</fullName>
        <inlineHelpText>Click this link to mass report Pipeline properties.</inlineHelpText>
        <label>Pipeline View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portfolio_View_URL__c</fullName>
        <label>Portfolio View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Preliminary_Bid_Due__c</fullName>
        <label>Preliminary Bid Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_ListView_Id__c</fullName>
        <label>Property ListView Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ListView__c</fullName>
        <formula>IF(ISBLANK(Property_ListView_Id__c), &apos;&apos;, HYPERLINK(&apos;/a0O?div_filter=&amp;fcf=&apos; + LEFT(Property_ListView_Id__c, 15), &apos;Click here&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property ListView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_ListView_Id__c</fullName>
        <label>Prospect ListView Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_ListView__c</fullName>
        <formula>IF(ISBLANK(Prospect_ListView_Id__c), &apos;&apos;, HYPERLINK(&apos;/a0n?div_filter=&amp;fcf=&apos; + LEFT(Prospect_ListView_Id__c, 15), &apos;Click here&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect ListView</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_View__c</fullName>
        <inlineHelpText>If you request upload assistance from the sf.com team, we will create a view that the region(s) can use to quickly filter on the related properties to accelerate the review/underwriting process.</inlineHelpText>
        <label>Prospect View URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_PSF__c</fullName>
        <formula>Purchase_Price__c  /  Total_Square_Feet__c</formula>
        <label>Purchase Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_per_Asset__c</fullName>
        <formula>Purchase_Price__c  /  Total_Properties__c</formula>
        <label>Purchase Price per Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Party</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Status__c</fullName>
        <label>Salesforce Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Upload</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Deal Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Freddie Mac</fullName>
                </value>
                <value>
                    <fullName>IH Website</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Servicer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Comments__c</fullName>
        <label>Special Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>States_Involved_in_Deal__c</fullName>
        <label>State(s) Involved in Deal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submit_to_Seller_Deadline__c</fullName>
        <inlineHelpText>The date by which IH needs to respond if we want to buy.</inlineHelpText>
        <label>Submit to Seller Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Summaries_Ordered__c</fullName>
        <label>Title Summaries Ordered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Seller Provides</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Properties_All_Regions__c</fullName>
        <inlineHelpText>Total properties across all Bulk Regional Component records.</inlineHelpText>
        <label>Total Properties all Regions</label>
        <summarizedField>Bulk_Regional_Component__c.Properties__c</summarizedField>
        <summaryForeignKey>Bulk_Regional_Component__c.Bulk_Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Properties__c</fullName>
        <label># Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Square_Feet__c</fullName>
        <label>Total Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Model_Distributed__c</fullName>
        <label>UW Model Distributed</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UW_Status__c</fullName>
        <label>UW Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will be checked by a member of the SF Team once the properties have been uploaded.  An email alert will be sent to the Bulk Deal Owner, Responsible Party, and Acquisitions Analyst.</inlineHelpText>
        <label>Upload Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_Request_Date__c</fullName>
        <label>Upload Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upload_Request_Notes__c</fullName>
        <inlineHelpText>Use this field to indicate specific instructions, including critical timelines. The SF.com team will make best efforts to be responsive and upload the data within 4 business hours (CST) of receiving it, assuming it&apos;s in the correct format.</inlineHelpText>
        <label>Upload Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upload_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you need help uploading properties, attach the template in Notes &amp; Attachments, save the record, and THEN check this box.  If you check this box and save it before attaching a file, then Chatter Salesforce Administrator after you attach the file.</inlineHelpText>
        <label>Upload Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_of_Accepted_Offer__c</fullName>
        <label>Value of Accepted Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bulk Deal</label>
    <listViews>
        <fullName>A1_Deal_Overview</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Bulk_Deal_Stage__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Properties__c</columns>
        <columns>Percent_Occupied__c</columns>
        <columns>Purchase_Price__c</columns>
        <columns>Purchase_Price_per_Asset__c</columns>
        <columns>Purchase_Price_PSF__c</columns>
        <columns>All_In_Basis__c</columns>
        <columns>All_In_Basis_per_Asset__c</columns>
        <columns>All_In_Basis_PSF__c</columns>
        <columns>All_In_Basis_Gross_Yield__c</columns>
        <columns>Responsible_Party__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initated_by__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>A1 Deal Overview</label>
    </listViews>
    <listViews>
        <fullName>A2_Accounting_View</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Bulk_Deal_Stage__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Value_of_Accepted_Offer__c</columns>
        <columns>Deposit_Amount__c</columns>
        <columns>Deposit_Date__c</columns>
        <columns>Closing_Balance__c</columns>
        <columns>Closing_Wire_Date__c</columns>
        <columns>Responsible_Party__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initated_by__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>A2 Accounting View</label>
    </listViews>
    <listViews>
        <fullName>A3_Legal_View</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Bulk_Deal_Stage__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Confidentiality_Agreement__c</columns>
        <columns>LOI_Status__c</columns>
        <columns>LOI_Execution_Date__c</columns>
        <columns>PSA_Status__c</columns>
        <columns>PSA_Execution_Date__c</columns>
        <columns>IH2_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initated_by__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>A3 Legal View</label>
    </listViews>
    <listViews>
        <fullName>A4_Due_Diligence_View</fullName>
        <columns>NAME</columns>
        <columns>Bulk_Deal_Stage__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>UW_Model_Distributed__c</columns>
        <columns>UW_Status__c</columns>
        <columns>Salesforce_Status__c</columns>
        <columns>Preliminary_Bid_Due__c</columns>
        <columns>Final_Bid_Due__c</columns>
        <columns>Due_Diligence_Expiration_Date__c</columns>
        <columns>Due_Diligence_Expiration_Date_Notes__c</columns>
        <columns>Closing_Date__c</columns>
        <columns>Closing_Date_Notes__c</columns>
        <columns>Title_Summaries_Ordered__c</columns>
        <columns>Financing_Docs_Ready_Missing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initated_by__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>A4 Due Diligence View</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Bulk_Deal__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Properties__c</columns>
        <columns>Purchase_Price__c</columns>
        <columns>PSA_Approved_by_Acquisitions__c</columns>
        <columns>PSA_Approved_by_Legal__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Upload_Request__c</columns>
        <columns>Upload_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Deals</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Submit_to_Seller_Deadline__c</columns>
        <columns>Total_Properties__c</columns>
        <columns>List_Price__c</columns>
        <columns>IH_Bulk_Value__c</columns>
        <columns>Initial_Offer_Amount__c</columns>
        <columns>Offered__c</columns>
        <columns>Purchase_Price__c</columns>
        <columns>Number_Acquired__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initated_by__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Corporate Deals</label>
    </listViews>
    <listViews>
        <fullName>Due_Diligence</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Submit_to_Seller_Deadline__c</columns>
        <columns>Total_Properties__c</columns>
        <columns>Bulk_Deal_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Upload_Request__c</columns>
        <columns>Upload_Complete__c</columns>
        <columns>List_Price__c</columns>
        <columns>IH_Bulk_Value__c</columns>
        <columns>Initial_Offer_Amount__c</columns>
        <columns>Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal_Status__c</field>
            <operation>equals</operation>
            <value>Due Diligence</value>
        </filters>
        <label>Due Diligence</label>
    </listViews>
</CustomObject>